gitops/apps/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: dev
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
            - name: frontend
        image: frontend:v2
        imagePullPolicy: Never
        ports:
                - containerPort: 80
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 100m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: dev
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
    - port: 80
    targetPort: 80
  type: ClusterIP
